更新日志：
2.1.2:
接入极光推送实现小说更新提醒，这种东西一接入就流氓了，尝试中，
调小电量字体，

2.1.1:
修复起点部分搜索失败的问题，
修复动漫之家部分小说章节没有分段的问题，
尝试解决小说排版时可能卡界面的问题，

2.1.0:
添加小说更新提醒功能，
 期待不要太高，原理是把自己刷出来的更新推送给别人，所以总要有人刷，
 而且服务器负载不一定受得了，随时可能关掉，
修复翻过章节时可能跳一整章的问题，

2.0.8:
精确搜索改成模糊搜索，
起点小说列表不获取长度，
优化内存，
升级提示点酷安直接跳到酷安app，

2.0.7:
紧急修复崩溃问题，
初步怀疑是没有谷歌框架的全部崩溃，
老实说没测试，但是现在直接捕获处理了崩溃，

2.0.6:
添加颜色输入框，
修复有时修改背景色不会删除背景图的问题，
选择颜色时背景不变暗，
修复"31小说"失效的问题，
修复部分小说无法加入书架的问题，
优化线程，
添加更新检测，

2.0.5:
修复一些崩溃问题，
章节没加载出来时点击目录崩溃，
前翻到只有一页的章节崩溃，
阻止但不处理一些莫名的崩溃，
离开app后回来时崩溃，
章节列表没加载出来时切换章节崩溃，
支持“31小说”获取更新时间，
解决“31小说”部分小说打不开的问题，

2.0.4:
修复阅读时出现无响应的问题，
修复“31小说”存在重复章节的问题，

2.0.3:
添加网站“31小说”，
解决刷新当前章没有重新获取正文的问题，
解决正文最后一行像素可能不显示的问题，

2.0.2:
紧急修复随便就崩溃的问题，

2.0.1:
紧急修复设置中的杂项设置打开崩溃的问题，

2.0.0:
接入bugly崩溃分析，之前版本的崩溃无响应没办法解决，
阅读页设置面板防误触，
排版拖动条添加两个微调按钮，
修改些默认设置，没改过的用户受影响，

1.3.12:
添加阅读页面时间电池页码之类信息展示，
旧的排版设置失效，阅读页面的排版里有信息的排版设置，规则略复杂，
添加点出菜单的中心区域大小设置，

1.3.11:
解决起点部分小说无法获取详情页信息的问题，
解决起点部分小说无法分段的问题，
优化仿真翻页动画，
解决书架部分网站小说更新时间不会刷新的问题，

1.3.10:
解决翻页有时没动画的问题，
添加音量键翻页的设置，
点击翻页改成以对角线为分界线，
添加全屏点击翻下页的设置，

1.3.9:
优化书架的用户体验，
添加几个关于小红点的设置，
添加启动app时自动刷新书架的开关，

1.3.8:
添加书单分享功能，长按书单选择分享，
添加单本书分享功能，详情页选择菜单分享，
支持扫码或直接输入地址下载书单和打开详情页，
修复过大的页面无法获取的问题，比如部分超长小说的章节列表，

1.3.7:
修复溜达小说搜索报错的问题，
尝试修复起点获取小说内容可能出现的错误，报错提到cU,
修复字体恢复默认无效的问题，

1.3.6:
添加书源“少年文学”，
修复“SF轻小说”小说列表无法加载出下一页的问题，
修复起点更新时间不准确的问题，

1.3.5:
紧急修复起点部分小说无法获取更新时间导致无法获取章节列表的问题，
起点改了详情页显示的更新时间格式，目前粗略支持下，只精确到小时，后续再改，
添加网站“SF轻小说”，

1.3.4:
更改起点源小说获取方式以节省流量，
修复溜达小说无法搜索的问题，

1.3.3:
怠惰，好久没写代码了，修个严重的小bug, 看来没什么用户在这看轻小说，
解决动漫之家带空格的章节没有获取的问题，

1.3.2:
添加字体设置，
章节名加粗，
修复翻页切换章节可能卡一下的问题，
解决左右来回翻页时仿真动画闪一下的问题，

1.3.1:
添加动画速度的设置，
仿真翻页背面显示背景色，
修复左右翻页时可能错显示下一页的问题，
修复新动画下刷新当前章节无效的问题，
修复切换章节超过范围报错的问题，

1.3.0:
添加新的阅读器，支持左右翻页，包括仿真，覆盖，滑动，等等，
动画设置为简单则使用旧阅读器，
段间距表现改为设置的行间距加上段间距，
修复部分设备无权限设置背景图片的问题，
解决精确搜索页离开后回来可能丢失搜索信息的问题，
扫一扫从精确搜索移出到主页面的菜单栏，

1.2.3:
添加章节列表中章节名颜色设置，
删除动漫之家的空行和显示“下一页”的多余行，
优化精确搜索功能，
1. 添加扫描二维码，可在电脑浏览器上以书名生成二维码到app里扫描，
2. 点开搜索框时自动填上当前搜索文字，

1.2.2:
添加轻小说网站"动漫之家"，
试着解决支付宝捐赠可能打不开的问题，

1.2.1:
添加背景图片设置，
修复精确搜索时一个网站小说详情加载失败导致剩下网站停止加载的bug,

1.2.0: