@@ -63,7 +63,6 @@ dependencies {
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:support-vector-drawable:$support_version"
     implementation "com.google.firebase:firebase-ads:$firebase_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
