@@ -1,6 +1,7 @@
 更新日志：
 2.1.2:
 接入极光推送实现小说更新提醒，这种东西一接入就流氓了，尝试中，
+解决android4设备上部分https页面无法获取的问题，
 调小电量字体，
 
 2.1.1:
